# plansearch

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
search/: backtranslate.py  base_classes.py  basic_prompting.py  combo_observation_model.py  combo_ratio_finder.ipynb  create_general_taco_sols.py  create_llama_sols.py  create_taco_backtranslate.py  create_taco_sols.py  dataset_utils.py  eval.py  exec_utils.py  fn.py  generate_from_model.py  graph_pass_k.ipynb  model_config_utils.py  one_prompt_models.py  parsel_model.py  parsing_utils.py  pseudocode_model.py  python_utils.py  querier_utils.py  queriers.py  query_clients.py  reward_model_utils.py  scale_lcb_eval.py  see_codeforces.ipynb  simple_filter_models.py  simple_idea_model.py  simple_observation_model.py
search/caches/: merge_caches.py  merge_caches.sh
search/dataset_scripts/: add_public_tests.py  create_taco_backtranslate.py  filter_zero_public_tests.py  format_lcb_data.py  format_taco_data.py  make_data.py  make_dpo_dataset.py  make_taco_cleaner.py
search/model_configs/: baby-deepseek-b_sgl.json  baby-deepseek-i_sgl.json  custom_vllm.json  deepseek-coder.json  gpt-4-turbo.json  gpt-4o-mini.json  gpt-4o.json  llama31405bi.json  llama31405bi_fire.json  llama31405bi_tog.json  llama3170b_sgl.json  llama3170bi_fire.json  llama3170bi_sgl.json  llama318b_sgl.json  llama318bi.json  llama318bi_sgl.json  o1-mini.json  o1-preview.json  sonnet-3-5.json
search/parsel/: construct_graph.py  parsel.py  parsel_queries.py  translate_to_parsel.py
search/prompts/: backtranslate_prompts.py  (+7 more)
(+50 files in other folders)
