[project]
name = "search"
version = "0.1.0"
description = "PlanSearch"
dependencies = [
    "accelerate==1.0.0",
    "anthropic==0.35.0",
    "astdump==4.3",
    "datasets==3.0.1",
    "deepspeed==0.15.1",
    "hf_transfer==0.1.8",
    "huggingface-hub==0.25.1",
    "libcst==1.4.0",
    "numpy==1.26.4",
    "openai==1.51.1",
    "pandas==2.2.3",
    "peft==0.13.0",
    "requests==2.32.3",
    "scale-llm-engine==0.0.0b39",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "sglang==0.3.2",
    "tiktoken==0.7.0",
    "together==1.3.1",
    "torch==2.4.0",
    "tqdm==4.66.5",
    "transformers==4.45.2",
    "vllm==0.5.5",
    "wandb==0.18.3"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

